@@ -20,7 +20,7 @@ CLEANFILES = gnome-branded.xml gnome-branded.xml.in
 EXTRA_DIST = $(background_DATA) gnome-branded.xml.in.in
 
 gnome-branded.xml.in: gnome-branded.xml.in.in Makefile
-	sed -e 's^\@datadir\@^$(datadir)^g' < gnome-branded.xml.in.in > gnome-branded.xml.in.tmp \
+	sed -e 's^\@datadir\@^$(datadir)^g' < $(srcdir)/gnome-branded.xml.in.in > gnome-branded.xml.in.tmp \
 	&& mv gnome-branded.xml.in.tmp gnome-branded.xml.in
 
 MAINTAINERCLEANFILES = \
