@@ -20,7 +20,7 @@ CLEANFILES = gnome-tiles.xml gnome-tiles.xml.in
 EXTRA_DIST = $(background_DATA) gnome-tiles.xml.in.in
 
 gnome-tiles.xml.in: gnome-tiles.xml.in.in Makefile
-	sed -e 's^\@datadir\@^$(datadir)^g' < gnome-tiles.xml.in.in > gnome-tiles.xml.in.tmp \
+	sed -e 's^\@datadir\@^$(datadir)^g' < $(srcdir)/gnome-tiles.xml.in.in > gnome-tiles.xml.in.tmp \
 	&& mv gnome-tiles.xml.in.tmp gnome-tiles.xml.in
 
 MAINTAINERCLEANFILES = \
